--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,7 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  --lilac-color: 200, 162, 200;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -24,7 +25,10 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  
+  background-color: rgb(var(--lilac-color));
 }
+
 
 @layer utilities {
   .text-balance {
